C/include/SFML/Window/Joystick.h

//Check if a joystick is connected
DSFML_WINDOW_API DBool sfJoystick_isConnected(DUint joystick);
//Return the number of buttons supported by a joystick
DSFML_WINDOW_API DUint sfJoystick_getButtonCount(DUint joystick);
//Check if a joystick supports a given axis
DSFML_WINDOW_API DBool sfJoystick_hasAxis(DUint joystick, DInt axis);
//Check if a joystick button is pressed
DSFML_WINDOW_API DBool sfJoystick_isButtonPressed(DUint joystick, DUint button);
//Get the current position of a joystick axis
DSFML_WINDOW_API float sfJoystick_getAxisPosition(DUint joystick, DInt axis);
//Update the states of all joysticks
DSFML_WINDOW_API void sfJoystick_update(void);