include/DSFMLC/Window/Mouse.h

//Check if a mouse button is pressed
DSFML_WINDOW_API DBool sfMouse_isButtonPressed(DInt button);
//Get the current position of the mouse
DSFML_WINDOW_API void sfMouse_getPosition(const sfWindow* relativeTo, DInt* x, DInt* y);
//Set the current position of the mouse
DSFML_WINDOW_API void sfMouse_setPosition(DInt x, DInt y, const sfWindow* relativeTo);