dsfml/window.d

			
			system = (controlPressed == sfTrue)?true:false;
			
		}
	}
	
	struct TextEvent
	{
		dchar unicode;
		this(uint uCode)
		{
			unicode = uCode;
		}
	}
	
	struct MouseMoveEvent
	{
		int x;
		int y;
		this(int X, int Y)
		{
			x = X;
			y = Y;
		}
	}
	
	struct MouseButtonEvent
	{
		Mouse.Button button;
		int x; 
		int y; 
	}
	
	struct MouseWheelEvent
	{
		int  delta;
		int  x;
		int  y;
	}
	
	struct JoystickConnectEvent
	{
		uint joystickId; 
	}
	
	
	struct JoystickMoveEvent 
	{
		uint joystickId; 
		Joystick.Axis axis; 
		float position; 
		
		this(uint joystick, Joystick.Axis sfAxis,float sfPosition)
		{
			joystickId = joystick;
			axis = cast(Joystick.Axis)sfAxis;
			position = 	sfPosition;
			
		}
	}
	struct JoystickButtonEvent
	{
		uint joystickId;
		uint button;
		this(uint joystick, uint Button)
		{
			joystickId = joystick;
			button = Button;
		}
	}
	
	
}



struct VideoMode
{
	uint width;
	uint height;
	uint bitsPerPixel;
	
	this(uint Width, uint Height, uint bits= 32)
	{
		width = Width;
		height = Height;
		bitsPerPixel = bits;
	}
	
	
	package this(sfVideoMode videoMode)
	{
		width = videoMode.width;
		height = videoMode.height;
		bitsPerPixel = videoMode.bitsPerPixel;
	}
	
	package sfVideoMode tosfVideoMode()const
	{
		return sfVideoMode(width,height, bitsPerPixel);
	}
	
	static VideoMode getDesktopMode()
	{
		return VideoMode(sfVideoMode_getDesktopMode());
	}
	
	static VideoMode[] getFullscreenModes()
	{
		
		sfVideoMode* modes;
		size_t counts;
		
		modes = sfVideoMode_getFullscreenModes(&counts);
		
		VideoMode[] videoModes;
		videoModes.length = counts;
		
		for(uint i = 0; i < counts; ++i)
		{
			videoModes[i] = VideoMode(modes[i]);
		}
		
		return videoModes;
		
	}
	
	bool isValid() const
	{
		return (sfVideoMode_isValid(this.tosfVideoMode()) == sfTrue)? true:false;
	}
	
	//used for debugging
	string toString()
	{
		return "Width: " ~ text(width) ~ " Height: " ~ text(height) ~ " Bits per pixel: " ~ text(bitsPerPixel);
	}
	
	
	
}


version(Windows)
{
	struct HWND__;
	alias HWND__* WindowHandle;
}
version(OSX)
{
	alias c_ulong WindowHandle;
}
version(linux)
{
	alias void* WindowHandle;
}



//Internal Binding Portion
package:

enum sfEventType
{
	sfEvtClosed,
	sfEvtResized,
	sfEvtLostFocus,
	sfEvtGainedFocus,
	sfEvtTextEntered,
	sfEvtKeyPressed,
	sfEvtKeyReleased,
	sfEvtMouseWheelMoved,
	sfEvtMouseButtonPressed,
	sfEvtMouseButtonReleased,
	sfEvtMouseMoved,
	sfEvtMouseEntered,
	sfEvtMouseLeft,
	sfEvtJoystickButtonPressed,
	sfEvtJoystickButtonReleased,
	sfEvtJoystickMoved,
	sfEvtJoystickConnected,
	sfEvtJoystickDisconnected
}

struct sfKeyEvent
{
	sfEventType type;
	Keyboard.Key   code;
	sfBool      alt;
	sfBool      control;
	sfBool      shift;
	sfBool      system;
}

struct sfTextEvent
{
	sfEventType type;
	int    unicode;
}

struct sfMouseMoveEvent
{
	sfEventType type;
	int         x;
	int         y;
}

struct sfMouseButtonEvent
{
	sfEventType   type;
	Mouse.Button button;
	int           x;
	int           y;
}

struct sfMouseWheelEvent
{
	sfEventType type;
	int         delta;
	int         x;
	int         y;
}

struct sfJoystickMoveEvent
{
	sfEventType    type;
	uint   joystickId;
	Joystick.Axis axis;
	float          position;
}

struct sfJoystickButtonEvent
{
	sfEventType  type;
	uint joystickId;
	uint button;
}

struct sfJoystickConnectEvent
{
	sfEventType  type;
	uint joystickId;
}

struct sfSizeEvent
{
	sfEventType  type;
	uint width;
	uint height;
}

union sfEvent
{
	sfEventType type;
	sfSizeEvent size;
	sfKeyEvent key;
	sfTextEvent text;
	sfMouseMoveEvent mouseMove;
	sfMouseButtonEvent mouseButton;
	sfMouseWheelEvent mouseWheel;
	sfJoystickMoveEvent joystickMove;
	sfJoystickButtonEvent joystickButton;
	sfJoystickConnectEvent joystickConnect;
}





extern(C)
{
	struct sfContext;
	struct sfWindow;

	struct sfVideoMode
	{
		uint width;
		uint height;
		uint bitsPerPixel;
	}

	//Context
	sfContext* sfContext_create();
	void sfContext_destroy(sfContext* context);
	void sfContext_setActive(sfContext* context, bool  active);
	
	//Joystick
	sfBool sfJoystick_isConnected(uint joystick);
	uint sfJoystick_getButtonCount(uint joystick);
	sfBool sfJoystick_hasAxis(uint joystick, Joystick.Axis axis);
	sfBool sfJoystick_isButtonPressed(uint joystick, uint button);
	float sfJoystick_getAxisPosition(uint joystick, Joystick.Axis axis);
	void sfJoystick_update();
	
	//Keyboard
	sfBool sfKeyboard_isKeyPressed(Keyboard.Key key);
	
	//Mouse
	sfBool sfMouse_isButtonPressed(Mouse.Button button);
	sfVector2i sfMouse_getPosition(const(sfWindow)* relativeTo);
	void sfMouse_setPosition(sfVector2i position, const(sfWindow)* relativeTo);
	
	//Video Mode
	sfVideoMode sfVideoMode_getDesktopMode();
	sfVideoMode* sfVideoMode_getFullscreenModes(size_t* Count);
	sfBool sfVideoMode_isValid(sfVideoMode mode);
	
	//Window
	sfWindow* sfWindow_create(sfVideoMode mode, const(char)* title, uint style, const(ContextSettings)* settings);
	sfWindow* sfWindow_createFromHandle(WindowHandle handle, const(ContextSettings)* settings);
	sfWindow* sfWindow_createUnicode(sfVideoMode mode, const(uint)* title, uint style, const(ContextSettings)* settings);
	void  sfWindow_destroy(sfWindow* window);
	void  sfWindow_close(sfWindow* window);
	sfBool   sfWindow_isOpen(const(sfWindow)* window);
	ContextSettings  sfWindow_getSettings(const(sfWindow)* window);
	sfBool   sfWindow_pollEvent(sfWindow* window, sfEvent* event);
	sfBool   sfWindow_waitEvent(sfWindow* window, sfEvent* event);
	sfVector2i  sfWindow_getPosition(const(sfWindow)* window);
	void  sfWindow_setPosition(sfWindow* window, sfVector2i position);
	sfVector2u  sfWindow_getSize(const(sfWindow)* window);
	void  sfWindow_setSize(sfWindow* window, sfVector2u size);
	void  sfWindow_setTitle(sfWindow* window, const(char)* title);
	void sfWindow_setUnicodeTitle(sfWindow* window, const(uint)* title);
	void  sfWindow_setIcon(sfWindow* window, uint width, uint height, const(ubyte)* pixels);
	void  sfWindow_setVisible(sfWindow* window, sfBool  visible);
	void  sfWindow_setMouseCursorVisible(sfWindow* window, sfBool  visible);
	void  sfWindow_setVerticalSyncEnabled(sfWindow* window, sfBool  enabled);
	void  sfWindow_setKeyRepeatEnabled(sfWindow* window, sfBool  enabled);
	sfBool   sfWindow_setActive(sfWindow* window, sfBool  active);
	void  sfWindow_display(sfWindow* window);
	void  sfWindow_setFramerateLimit(sfWindow* window, uint limit);
	void  sfWindow_setJoystickThreshold(sfWindow* window, float threshold);
	WindowHandle  sfWindow_getSystemHandle(const(sfWindow)* window);
}
